<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Presentation.AccountActivity">

    <LinearLayout
        android:id="@+id/account_visitor"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/anonymous_account_image"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_margin="20dp"
            android:contentDescription="@string/todo"
            android:scaleType="centerCrop"
            android:src="@drawable/anonymous_account" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/visitor_login_prompt"
            android:textAppearance="@android:style/TextAppearance.Large" />

        <Button
            android:id="@+id/btn_login_account_page"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="24dp"
            android:padding="12dp"
            android:text="@string/login" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/account_logined"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/account_uername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/user_name_placeholer"
            android:textAppearance="?android:textAppearanceLarge" />

        <Button
            android:id="@+id/btn_Purchase_History"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@color/colorPrimary"
            android:text="@string/purchase_history"
            android:textColor="@android:color/background_light" />

        <Button
            android:id="@+id/button4"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@color/colorPrimary"
            android:text="Shopping Cart"
            android:textColor="@android:color/background_light" />


        <Button
            android:id="@+id/btn_Edit_Profie"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:text="Edit profile"
            android:textColor="@android:color/background_light" />

        <Button
            android:id="@+id/btn_account_wishlist"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:text="Wishlist"
            android:textColor="@android:color/background_light" />

        <Button
            android:id="@+id/btn_account_logout"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@color/colorCancel"
            android:text="@string/logout"
            android:textColor="@android:color/background_light" />


    </LinearLayout>

    <!--<android.support.design.widget.BottomNavigationView-->
        <!--android:id="@+id/account_page_navigation"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="50dp"-->
        <!--android:layout_alignParentBottom="true"-->
        <!--android:background="?android:attr/windowBackground"-->
        <!--app:menu="@menu/navigation" />-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true">
        <Button
            android:id="@+id/account_library"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:text="@string/title_library"/>
        <Button
            android:id="@+id/account_discover"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:text="@string/title_discover"/>
        <Button
            android:id="@+id/account_account"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:text="@string/title_account"/>
    </LinearLayout>
</RelativeLayout>