<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Presentation.HomePage"
    android:orientation="vertical">

    <Spinner xmlns:android="http://schemas.android.com/apk/res/android"
...
            android:id="@+id/home_discover"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:text="@string/title_discover"/>
        <Button
            android:id="@+id/home_account"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:text="@string/title_account"/>
    </LinearLayout>
</RelativeLayout>
