<resources>
    <string name="app_name">Bookworm</string>
    <string name="title_activity_main_page">MainPage</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_account">Account</string>
    <string name="title_bookshelf">Bookshelf</string>
    <string name="title_library">Library</string>
    <string name="title_shoppingcart">Shopping Cart</string>
    <string name="title_discover">Discover</string>
    <string name="title_placeorder">Place Your Order</string>
    <string name="visitor_login_prompt">Login is required to have a fully access to Bookworm</string>
...
    <string name="best_choice">Best choice</string>
    <string name="msg_add_to_cart">successfully added into the shopping cart!</string>
    <string name="btn_back_to_list">go back to book list</string>
    <string name="btn_check_cart">check my shopping cart</string>
    <string name="not_implemented_msg">Sorry, This feature is not implemented yet.</string>
    <string name="todo">TODO</string>
    <string name="login">Login</string>
    <string name="user_name_placeholer">User Name placeholer</string>
    <string name="purchase_history">Purchase History</string>
    <string name="temporary_checkout_confirmation">Temporary Checkout Confirmation</string>
    <string name="logout">logout</string>
    <string name="book_not_found">Book not found</string>
    <string name="warning">Warning</string>
...
